--- a/app/views/backend/admin/employees/partials/_fields.html.haml
+++ b/app/views/backend/admin/employees/partials/_fields.html.haml
@@ -1,4 +1,4 @@
-.row
+-#.row
   .col-md-6
     .form-group.required
       %label.control-label{:for => "full_name"} First name
@@ -8,6 +8,12 @@
     .form-group.required
       %label.control-label{:for => "full_name"} Last name
       =f.text_field :last_name , class: 'form-control' , placeholder: 'Enter last name' , data: {"validate": "required"}
+      %span.help-block
+.row
+  .col-md-12
+    .form-group.required
+      %label.control-label{:for => "full_name"} Username
+      =f.text_field :username , class: 'form-control' , placeholder: 'Enter username' , data: {"validate": "required"}
       %span.help-block
 .row
   .col-md-6
