--- a/app/views/backend/admin/employees/partials/_fields.html.haml
+++ b/app/views/backend/admin/employees/partials/_fields.html.haml
@@ -32,7 +32,7 @@
   .col-md-6
     .form-group.required
       %label.control-label{:for => "full_name"} Role
-      = f.select :role, options_for_select(User.roles.collect { |s| [s[0].humanize, s[0]] }), {} , class: "form-control"
+      = f.select :role, options_for_select(User.roles.collect { |s| [s[0].humanize, s[0]] } , f.object.role), {prompt: 'Select Employee Role'}  , class: "form-control"
       %span.help-block
   .col-md-6
     .form-group.required
